extract api auth method and add fade transitions

--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<span id="signinButton">
+<span id="signinButton" class="animated fade-out">
   <span class="g-signin"
     data-scope="https://www.googleapis.com/auth/plus.login"
     data-clientid="{clientId}"
