allow for custom scopes

--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <span id="signinButton" class="animated fade-out">
   <span class="g-signin"
-    data-scope="https://www.googleapis.com/auth/plus.login"
+    data-scope="{scopes}"
     data-clientid="{clientId}"
     data-redirecturi="postmessage"
     data-accesstype="offline"
